style.css
/* ... */
article p {
  color: #091e42;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  text-align: left;
  margin: 12px 24px;
  width: 327px;
}

.primary-text p {
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0 24px 12px 24px;
}

article ul {
  display: flex;
  align-items: center;
  list-style-type: none;
  padding: 0;
  margin: 24px 24px 0 24px;
}

.recent-works {
  display: grid;
}

h2.title {
  font-family: "Crete Round", sans-serif;
  width: 327px;
  height: 83px;
  margin: 120px 24px 24px 24px;
  font-style: normal;
  font-weight: 400;
  font-size: 40px;
  line-height: 52px;
  color: #1c1a19;
}

img.vector {
  width: 327px;
  height: 0;
  border: 1px solid #212121;
  margin: 0 24px 80px 24px;
}

img.themes {
  width: 327px;
  height: 237px;
  margin: 0 24px 24px 24px;
}

article h3 {
  color: #091e42;
  font-family: inherit;
  margin-left: 24px;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
}

article button,
.btn-resume {
  color: #fff;
  background: #ff6b00;
  font-family: inherit;
  line-height: 24px;
  font-size: 17px;
  font-weight: 700;
  margin-left: 24px;
  margin-top: 12px;
  padding: 12px;
  border: none;
  transition: background 2s;
}

button:hover {
  background-color: #fff5e1;
  color: #f55800;
}

button:active {
  color: #f4f1f0;
  background-color: #f55800;
}

.profession {
  background-image: url(./images/Bg\ Placeholder.png);
  background-repeat: no-repeat;
  background-size: cover;
  width: 80%;
  height: 380px;
  margin: 24px 24px;
}

.profession h4 {
  color: #fff;
  font-family: "Crete Round", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
  margin: 74px 16px 12px 16px;
  padding-top: 80px;
}

.profession p {
  color: #fff;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 12px 12px 12px 16px;
}

.profession ul {
  display: flex;
  align-items: center;
  list-style-type: none;
  padding: 0;
  margin: 12px 24px 24px 16px;
}

article ul li {
  border: 1px solid #8993a4;
  padding: 10px 12px;
  margin-right: 12px;
  font-size: inherit;
  font-size: 15px;
}

.lang li {
  padding: 12px 0;
  font-size: 22px;
}

.skills-lang li {
  font-family: "Inter", sans-serif;
  font-size: 32px;
}

.social-media-icon-2 ul {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15px;
  width: 100%;
}

.social-media-icon ul {
  display: flex;
  align-items: center;
  list-style-type: none;
  padding: 0;
  margin: 24px;
}

.social-media-icon ul li {
  padding: 0 12px;
}

.profession ul li {
  color: #fff;
  border: 1px solid #8993a4;
  padding: 10px 12px;
  margin-right: 12px;
  font-size: inherit;
  font-size: 15px;
  background-color: rgba(255, 255, 255, 0.24);
}

.btn-project {
  background: #ff6b00;
  font-family: inherit;
  font-size: 17px;
  font-weight: 700;
  width: 100%;
  height: 48px;
  margin: 12px 24px 120px 0;
  border: none;
}

.about-me {
  background: var(--background) url(./images/Group.png) no-repeat 100% 100%;
  align-items: flex-start;
  margin: 0;
  width: 100%;
  min-height: calc(100vh - 48px);
}

section h5 {
  font-family: "Crete Round", sans-serif;
  color: #ff6b00;
  letter-spacing: 0.37px;
  margin: 120px 24px 12px 24px;
  font-style: normal;
  font-weight: 400;
  font-size: 72px;
  line-height: 88px;
  width: 327px;
  height: 79px;
}

.about-me p {
  color: #f4f5f7;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 24px 24px;
}

.about-me p,
.submit-btn {
  font-family: "Inter", sans-serif;
}

img.vector4 {
  width: 327px;
  height: 0;
  border: 1px solid #fff;
  margin: 0 24px 0 24px;
}

.skills-lang {
  color: #fff;
  font-family: "Crete Round", sans-serif;
  text-align: center;
  margin-bottom: 35px;
}

.skills {
  background-color: #1c1a19;
  text-align: center;
  padding-top: 60px;
  margin-bottom: 0;
}

.lang {
  margin-top: 12px;
}

span {
  margin-right: 10px;
}

#name,
#email {
  width: 327px;
  font-family: inherit;
  padding: 10px;
  border: none;
  background: inherit;
  font-weight: 400;
  border-bottom: 1px solid gray;
  margin-bottom: 14px;
  font-size: 15px;
  line-height: 24px;
}

#message {
  width: 327px;
  margin-top: 25px;
  font-family: inherit;
  padding: 12px;
  background-color: #e5e5e5;
}

.submit-btn {
  height: 42px;
  max-width: 137px;
  background-color: #ff6b00;
  text-align: center;
  margin-left: 91px;
  margin-top: 24px;
  border: none;
  padding: 11px;
  letter-spacing: 1px;
  color: white;
  font-size: 17px;
  line-height: 24px;
  font-weight: 700;
}

.solid {
  width: 100%;
  margin-top: 124px;
  margin-bottom: 20px;
  border-top: 1px solid #dfe1e6;
}

.nav-container {
  background: #3c3a39;
  width: 100%;
}

.desktop-nav {
  background-color: #3e3c3c;
  display: none;
}

.desktop-profession {
  display: none;
}
/* ... */

